--- a/api/templates/caps.xml
+++ b/api/templates/caps.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <caps>
-    <server title="Jackett" />
+    <server title="DHT-Torznab" />
+    <limits max="50" default="25" />
     <searching>
         <search available="yes" supportedParams="q" />
     </searching>
